app/javascript/react/screens/App/Plan/Plan.scss
.plan-request-details-list .list-view-pf-main-info {
  padding: 10px 0;
}

.plan-request-details-list .list-view-pf-additional-info-item {
  padding: 10px 0;
}

.plan-request-details-list .progress-description {
  overflow: visible;
  text-overflow: initial;
}

.plan-request-details-list .list-view-pf-description {
  width: 30%;
}

.plan-request-details-list .utilization-bar-pf {
  min-width: 175px;
}

.plan-request-details-list .progress-description {
  margin-bottom: 7px;
}

.plan-request-details-list .progress {
  margin-bottom: 0px;
}

.task-info-popover .popover-title {
  text-transform: capitalize;
}

